<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_addcity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:background="@mipmap/widget_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/start"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/weather_et_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/stop"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/weather_et_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>

        <Button
            android:id="@+id/weather_bt_find"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/find"/>

    </LinearLayout>

    <ListView
        android:id="@+id/weather_lv_train"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@mipmap/widget_bg">

    </ListView>

</LinearLayout>