<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/weather_ll_"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@mipmap/top_bar">

        <Button
            android:id="@+id/weather_bt_switch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/menu_city"
            />
        <Button
            android:id="@+id/weather_bt_refresh"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/refresh"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        >
        <TextView
            android:id="@+id/weather_tv_cit"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:textSize="50sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/weather_tv_time"
            android:layout_height="30dp"
            android:layout_width="150dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="95dp"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/weather_tv_wind"
            android:layout_height="30dp"
            android:layout_width="120dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/weather_tv_weather"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="160dp"
            android:textSize="32sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/weather_tv_publish"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="280dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/weather_tv_temperature"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginTop="130dp"
            android:layout_marginStart="190dp"
            android:textSize="30sp"
            android:gravity="center"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@mipmap/widget_bg">
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:background="@mipmap/cloths"
                />
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/weather_tv_dress"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/dress"
                    android:textSize="22sp"/>
                <TextView
                    android:id="@+id/weather_tv_howdress"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    />
            </LinearLayout>

            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:background="@mipmap/travel"
                />
            <LinearLayout
                android:id="@+id/weather_ll_travel"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/weather_tv_travel"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/travel"
                    android:textSize="22sp"/>
                <TextView
                    android:id="@+id/weather_tv_howtravel"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:background="@mipmap/widget_bg">
            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:background="@mipmap/sport"
                />
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/weather_tv_sport"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/sport"
                    android:textSize="22sp"/>
                <TextView
                    android:id="@+id/weather_tv_howsport"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    />
            </LinearLayout>

            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:background="@mipmap/ray"
                />
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/weather_tv_ray"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/ray"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/weather_tv_howray"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textSize="24sp"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_marginTop="190dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/suggestion"
                android:textSize="26sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp">
                <TextView
                    android:id="@+id/weather_tv_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:background="@mipmap/widget_bg"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/future"
                android:textSize="26sp"/>
        </LinearLayout>

        <include layout="@layout/activity_future"/>

    </RelativeLayout>
    </ScrollView>



</LinearLayout>
